# jutella-xmpp

./: CHANGELOG.md  Cargo.toml  README.md
config/: jutellaxmpp.toml
src/: config.rs  jutella.rs  main.rs  message.rs  types.rs  xmpp.rs
src/engine/: handler.rs  mod.rs
systemd/: jutellaxmpp.service
